--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -32,9 +32,14 @@ main {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filters__button:hover {
+.filters__button:hover,
+.filters__button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -75,31 +80,21 @@ main {
 }
 
 .card {
-  /* width: calc((100% - 2 * 30px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px; */
   width: 370px;
   margin: 15px;
-  /* outline: 2px solid tomato; */
-  /* border: 1px solid var(--card-border-color); */
-  /* border-radius: 5px; */
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .card:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.card:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-} */
-
-.card:hover {
+.card:hover,
+.card:focus {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
     0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .card__header {
   position: relative;
+  overflow: hidden;
 }
 
 .card__overlay {
@@ -118,11 +113,12 @@ main {
   font-size: 18px;
   line-height: 1.56;
 
-  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card:hover .card__overlay {
-  opacity: 1;
+  transform: translateY(0%);
 }
 
 .card__image {
